# launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: download_lyrebird.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  r00tshop.example.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  connection.rs  error.rs  http.rs  lib.rs  main.rs  mockdata.rs  models.rs  storage.rs
src/components/: AsciiBackground.tsx  AsyncImage.tsx  Avatar.tsx  CodeBlock.tsx  DeliveryBox.tsx  FavoriteButton.tsx  Layout.tsx  Lightbox.tsx  Logo.tsx  MarketplaceApiPanel.tsx  NotificationPopover.tsx  ProductCard.tsx  ProductCover.tsx  ProductPreview.tsx  ProjectViewer.tsx  Reviews.tsx  RoleBadge.tsx  StatusBadge.tsx  StorePanel.tsx  TitleBar.tsx  UserMenu.tsx  brutalist.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  tabs.tsx  textarea.tsx
src/lib/: api.ts  crypto.ts  favorites.ts  i18n.tsx  mock.ts  mockStore.ts  productKinds.ts  recentlyViewed.ts  savedMessages.ts  utils.ts
src/screens/: Catalog.tsx  Chat.tsx  Library.tsx  Login.tsx  Messages.tsx  ProductEditor.tsx  ProductPage.tsx  Profile.tsx  SellerDashboard.tsx  SellerStore.tsx  Settings.tsx  Splash.tsx  UserProfile.tsx  Wallet.tsx
src/store/: app-context.tsx
src/types/: api.ts
